# Agentic_learning

./: README.md
chainlit_agent/: readme.md
chainlit_agent/myapp/: .env  README.md  pyproject.toml
chainlit_agent/myapp/src/myapp/: script.py
